added the rest of the basic page. until there is more content, the homepage is done.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
 	<head>
+		<!-- <meta charset="UTF-8" /> -->
+		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 		<title>Dan Harrison</title>
 		<link rel="stylesheet" media="screen" href="css/default.css" />
 	</head>
 	<body>
-		<div id="hold">
-			<div id="pic"><img src="img/pic.png" alt="Picture"></div>
+		<div id="content">
+			<div id="hold">
+				<div id="pic">
+					<div id="fill"><img src="img/pic.jpg" alt="Me" /></div>
+				</div>
+			</div>
 			<div id="links">
 				<a href="https://github.com/hwyfour"><article><span>github</span></article></a>
 				<a href="https://twitter.com/hwyfour"><article><span>twitter</span></article></a>
