finalized the css. added support for IE7/8, albeit a little uglier. removed css transitions because of safari not being able to render them for an unknown reason.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!doctype html>
 <html>
 	<head>
 		<!-- <meta charset="UTF-8" /> -->
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 		<title>Dan Harrison</title>
 		<link rel="stylesheet" media="screen" href="css/default.css" />
+		<!--[if lt IE 9]><link rel="stylesheet" media="screen" href="css/ie.css" /><![endif]-->
 	</head>
 	<body>
 		<div id="content">
@@ -13,11 +15,11 @@
 				</div>
 			</div>
 			<div id="links">
-				<a href="https://github.com/hwyfour"><article><span>github</span></article></a>
-				<a href="https://twitter.com/hwyfour"><article><span>twitter</span></article></a>
-				<a href="https://www.facebook.com/hwyfour"><article><span>facebook</span></article></a>
-				<a href="https://www.rdio.com/people/hwyfour/"><article><span>rdio</span></article></a>
-				<a href="mailto:hwyfour@gmail.com"><article><span>email</span></article></a>
+				<a id="gh" href="https://github.com/hwyfour"><article><span>github</span></article></a>
+				<a id="tw" href="https://twitter.com/hwyfour"><article><span>twitter</span></article></a>
+				<a id="fb" href="https://www.facebook.com/hwyfour"><article><span>facebook</span></article></a>
+				<a id="rd" href="https://www.rdio.com/people/hwyfour/"><article><span>rdio</span></article></a>
+				<a id="em" href="mailto:hwyfour@gmail.com"><article><span>email</span></article></a>
 			</div>
 		</div>
 	</body>
